--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -17,7 +17,7 @@
 			</div>
 
 			<div>
-				<button id="login-button" type="submit" onclick="location.href='/auth'">Log In</button>
+				<button id="login-button" type="submit" onclick="location.href='/auth'"></button>
 			</div>
 		</div>
 		<script type="text/javascript">
