--- a/app/views/error.ejs
+++ b/app/views/error.ejs
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>      
-      <h3>Error: <%- error %> Click <a href="/">here</a> to login again.  </h3>
+      <h3>Error: <%- error %></h3>
 
     <script type="text/javascript">
 
